# ollama-models-bench

./: .gitignore  README.md  RESULT.md  pyproject.toml
.github/workflows/: bench.yml
src/ollama_bench/: __init__.py  benchmarking.py  cli.py  config.py  evaluators.py  models.py  ollama_client.py  reporting.py
src/ollama_models_bench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_benchmark_engine.py  test_config.py  test_evaluators.py  test_integration_cli.py  test_reporting.py
